Fix filter input width on smaller screens

--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -3,7 +3,7 @@
 }
 
 .fieldWrapper {
-  @apply w-2/6;
+  @apply sm:w-5/6 md:w-4/6 lg:w-2/6;
 }
 
 .label {
